Reflections 0.10 refactor